--- a/index.html
+++ b/index.html
@@ -14,5 +14,8 @@
     <body class="page">
         <p>Hello</p>
     </body>
+    <footer class="footer">
+        
+    </footer>
 </body>
 </html>
